--- a/HZSHOP/HZSHOP/Home/View/HZGoodsParameterTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Home/View/HZGoodsParameterTableViewCell.xib
@@ -12,15 +12,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="HZGoodsParameterTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="HZGoodsParameterTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L2e-7h-oHW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVk-9U-hqK">
+                                <rect key="frame" x="15" y="83.5" width="290" height="1"/>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="dpk-xn-vZf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="IVk-9U-hqK" secondAttribute="trailing" constant="15" id="DbZ-Ic-Udn"/>
+                            <constraint firstAttribute="bottom" secondItem="IVk-9U-hqK" secondAttribute="bottom" id="Thc-dZ-R3K"/>
+                            <constraint firstItem="IVk-9U-hqK" firstAttribute="leading" secondItem="L2e-7h-oHW" secondAttribute="leading" constant="15" id="q27-MV-sm1"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="L2e-7h-oHW" secondAttribute="trailing" id="61J-vB-bnj"/>
+                    <constraint firstAttribute="bottom" secondItem="L2e-7h-oHW" secondAttribute="bottom" id="Lab-2n-cK3"/>
+                    <constraint firstItem="L2e-7h-oHW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="O9K-al-wtz"/>
+                    <constraint firstItem="L2e-7h-oHW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cle-j1-4Wx"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <point key="canvasLocation" x="102" y="127"/>
+            <connections>
+                <outlet property="bgView" destination="L2e-7h-oHW" id="4Pf-B0-5KD"/>
+            </connections>
+            <point key="canvasLocation" x="-59.200000000000003" y="112.89355322338831"/>
         </tableViewCell>
     </objects>
 </document>
