订单详情,提交订单接口对接

--- a/HZSHOP/HZSHOP/Mine/View/HZOrderCodeTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Mine/View/HZOrderCodeTableViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="47.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创建时间:2019-04-17 12:34:45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yD-4f-VbL">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yD-4f-VbL">
                         <rect key="frame" x="16" y="25" width="288" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="KlB-6e-SZs"/>
@@ -28,7 +28,7 @@
                         <color key="textColor" red="0.72941176470000002" green="0.72941176470000002" blue="0.72941176470000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="订单编号:123456789654323456" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yGE-8T-J3Q">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yGE-8T-J3Q">
                         <rect key="frame" x="16" y="2" width="288" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="57S-JQ-9nF"/>
@@ -48,6 +48,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="orderCodelLabel" destination="yGE-8T-J3Q" id="QuB-JY-bkW"/>
+                <outlet property="orderTimelLabel" destination="2yD-4f-VbL" id="UW1-YC-6Q7"/>
+            </connections>
             <point key="canvasLocation" x="136" y="116"/>
         </tableViewCell>
     </objects>
